Fix char column when code viewer is scrollable on firefox

--- a/src/mixins.less
+++ b/src/mixins.less
@@ -539,6 +539,10 @@
 }
 
 .code-viewer-char-column {
+    &.show-char-column {
+        position: relative;
+    }
+
     &::before {
         content: attr(data-char-column);
         position: absolute;
